# PockerApp

./: .gitignore  Cargo.toml  Trunk.toml  index.html
backend/: Cargo.toml
backend/src/: main.rs  run.rs
frontend/: Cargo.toml  Trunk.toml  styles.css
frontend/src/: app.rs  front_structs.rs  libs.rs  main.rs  table.rs  user_cards.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: macros.rs  main.rs
src/backend/: run.rs
src/frontend/: app.rs  mod.rs  structs.rs  table.rs
src/structs/: message.rs  mod.rs  user.rs
structs/: Cargo.toml
structs/src/: message.rs  user.rs
