[workspace]
resolver = "2"
members = ["backend", "frontend", "macros", "structs"]

[workspace.dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2.0.12", features = ["default"] }
uuid = { version = "1.18.1", features = ["js", "v4"] }
# tokio = { version = "1", features = ["full"] }
# tracing = { version = "0.1" }
# tracing-subscriber = { version = "0.3" }




