[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
chrono = { workspace = true }
dotenv = { workspace = true }
futures-util = { version = "0.3" }
macros = { path = "../macros" }
serde = { workspace = true }
serde_json = { workspace = true }
structs = { path = "../structs" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3" }
mio = { version = "1.1", features = ["os-poll", "net"] }
uuid = { workspace = true }

[features]
default = ["ssr"]
ssr = []
