[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
dotenv = { workspace = true }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
gloo-net = { version = "0.6.0", features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4.28"
macros = { path = "../macros" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { version = "0.6.5" }
structs = { path = "../structs" }
sycamore = { version = "0.9.1", features = ["suspense"] }
thiserror = { workspace = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { workspace = true }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
web-sys = { version = "0.3.77", features = [
  "Clipboard",
  "Document",
  "HtmlDocument",
  "Navigator",
  "Storage",
  "WebSocket",
  "Window"
] }

[features]
default = ["csr"]
csr = []
